# Push_swap

./: CMakeLists.txt  Makefile  README.md  a.out  main.c  main.h  main.h.gch  push_swap  test.py
Headers/: main.h
Instructions/: ft_push_a.c  ft_push_b.c  ft_reverse_rotate_a.c  ft_reverse_rotate_b.c  ft_reverse_rotate_rr.c  ft_rotate_a.c  ft_rotate_b.c  ft_rotate_rr.c  ft_swap_a.c  ft_swap_b.c  ft_swap_ss.c
Libft/: Makefile  ft_atoi.c  ft_isspace.c  ft_putchar_fd.c  ft_putstr_fd.c  ft_split.c  ft_strlcpy.c  ft_strlen.c  libft.h
Utils/: ft_check_string_is_digit.c  ft_populate.c  ft_sort_utils.c  ft_sort_utils2.c  ft_structs_utils.c
src/: ft_sort.c
